# qr-app

./: .pylintrc  Pipfile  README.md  app.py  pyproject.toml  qrcode  requirements.txt  sonar-project.properties
qr/: app.py
